修改客户详情菜单

--- a/files/客户详情/styles.css
+++ b/files/客户详情/styles.css
@@ -228,12 +228,21 @@
 #u1129 {
   position:absolute;
   left:0px;
-  top:105px;
+  top:125px;
+  width:375px;
+  height:523px;
+  overflow:hidden;
 }
 #u1129_state0 {
-  position:relative;
+  position:absolute;
   left:0px;
   top:0px;
+  width:375px;
+  height:523px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state0_content {
@@ -996,10 +1005,16 @@
   white-space:nowrap;
 }
 #u1129_state1 {
-  position:relative;
+  position:absolute;
   left:0px;
   top:0px;
+  width:375px;
+  height:523px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state1_content {
@@ -1010,10 +1025,16 @@
   height:1px;
 }
 #u1129_state2 {
-  position:relative;
+  position:absolute;
   left:0px;
   top:0px;
+  width:375px;
+  height:523px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state2_content {
@@ -1024,10 +1045,16 @@
   height:1px;
 }
 #u1129_state3 {
-  position:relative;
+  position:absolute;
   left:0px;
   top:0px;
+  width:375px;
+  height:523px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state3_content {
@@ -1038,10 +1065,16 @@
   height:1px;
 }
 #u1129_state4 {
-  position:relative;
+  position:absolute;
   left:0px;
   top:0px;
+  width:375px;
+  height:523px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state4_content {
@@ -1052,10 +1085,16 @@
   height:1px;
 }
 #u1129_state5 {
-  position:relative;
+  position:absolute;
   left:0px;
   top:0px;
+  width:375px;
+  height:523px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state5_content {
@@ -4172,7 +4211,9 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u1129.a {
   position:absolute;
   left:0px;
-  top:105px;
+  top:125px;
+  width:322px;
+  height:486px;
 }
 #u1130.a {
   width:322px;
@@ -6428,49 +6469,38 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u1345.a {
 }
 #u1129_state0.a {
-  position:relative;
-  left:0px;
-  top:0px;
+  width:322px;
+  height:486px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state1.a {
-  position:relative;
-  left:0px;
-  top:0px;
-  visibility:hidden;
+  width:322px;
+  height:486px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state2.a {
-  position:relative;
-  left:0px;
-  top:0px;
-  visibility:hidden;
+  width:322px;
+  height:486px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state3.a {
-  position:relative;
-  left:0px;
-  top:0px;
-  visibility:hidden;
+  width:322px;
+  height:486px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state4.a {
-  position:relative;
-  left:0px;
-  top:0px;
-  visibility:hidden;
+  width:322px;
+  height:486px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state5.a {
-  position:relative;
-  left:0px;
-  top:0px;
-  visibility:hidden;
+  width:322px;
+  height:486px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
@@ -6696,7 +6726,9 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u1129.b {
   position:absolute;
   left:0px;
-  top:105px;
+  top:125px;
+  width:414px;
+  height:612px;
 }
 #u1130.b {
   width:414px;
@@ -8860,49 +8892,38 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u1345.b {
 }
 #u1129_state0.b {
-  position:relative;
-  left:0px;
-  top:0px;
+  width:414px;
+  height:612px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state1.b {
-  position:relative;
-  left:0px;
-  top:0px;
-  visibility:hidden;
+  width:414px;
+  height:612px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state2.b {
-  position:relative;
-  left:0px;
-  top:0px;
-  visibility:hidden;
+  width:414px;
+  height:612px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state3.b {
-  position:relative;
-  left:0px;
-  top:0px;
-  visibility:hidden;
+  width:414px;
+  height:612px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state4.b {
-  position:relative;
-  left:0px;
-  top:0px;
-  visibility:hidden;
+  width:414px;
+  height:612px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state5.b {
-  position:relative;
-  left:0px;
-  top:0px;
-  visibility:hidden;
+  width:414px;
+  height:612px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
