修改客户详情菜单滑动菜单

--- a/files/客户详情/styles.css
+++ b/files/客户详情/styles.css
@@ -228,21 +228,12 @@
 #u1129 {
   position:absolute;
   left:0px;
-  top:125px;
-  width:375px;
-  height:523px;
-  overflow:hidden;
+  top:105px;
 }
 #u1129_state0 {
-  position:absolute;
+  position:relative;
   left:0px;
   top:0px;
-  width:375px;
-  height:523px;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state0_content {
@@ -1005,16 +996,10 @@
   white-space:nowrap;
 }
 #u1129_state1 {
-  position:absolute;
+  position:relative;
   left:0px;
   top:0px;
-  width:375px;
-  height:523px;
   visibility:hidden;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state1_content {
@@ -1025,16 +1010,10 @@
   height:1px;
 }
 #u1129_state2 {
-  position:absolute;
+  position:relative;
   left:0px;
   top:0px;
-  width:375px;
-  height:523px;
   visibility:hidden;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state2_content {
@@ -1045,16 +1024,10 @@
   height:1px;
 }
 #u1129_state3 {
-  position:absolute;
+  position:relative;
   left:0px;
   top:0px;
-  width:375px;
-  height:523px;
   visibility:hidden;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state3_content {
@@ -1065,16 +1038,10 @@
   height:1px;
 }
 #u1129_state4 {
-  position:absolute;
+  position:relative;
   left:0px;
   top:0px;
-  width:375px;
-  height:523px;
   visibility:hidden;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state4_content {
@@ -1085,16 +1052,10 @@
   height:1px;
 }
 #u1129_state5 {
-  position:absolute;
+  position:relative;
   left:0px;
   top:0px;
-  width:375px;
-  height:523px;
   visibility:hidden;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
   background-image:none;
 }
 #u1129_state5_content {
@@ -4211,9 +4172,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u1129.a {
   position:absolute;
   left:0px;
-  top:125px;
-  width:322px;
-  height:486px;
+  top:105px;
 }
 #u1130.a {
   width:322px;
@@ -6469,38 +6428,49 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u1345.a {
 }
 #u1129_state0.a {
-  width:322px;
-  height:486px;
+  position:relative;
+  left:0px;
+  top:0px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state1.a {
-  width:322px;
-  height:486px;
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state2.a {
-  width:322px;
-  height:486px;
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state3.a {
-  width:322px;
-  height:486px;
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state4.a {
-  width:322px;
-  height:486px;
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state5.a {
-  width:322px;
-  height:486px;
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
@@ -6726,9 +6696,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u1129.b {
   position:absolute;
   left:0px;
-  top:125px;
-  width:414px;
-  height:612px;
+  top:105px;
 }
 #u1130.b {
   width:414px;
@@ -8892,38 +8860,49 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u1345.b {
 }
 #u1129_state0.b {
-  width:414px;
-  height:612px;
+  position:relative;
+  left:0px;
+  top:0px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state1.b {
-  width:414px;
-  height:612px;
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state2.b {
-  width:414px;
-  height:612px;
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state3.b {
-  width:414px;
-  height:612px;
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state4.b {
-  width:414px;
-  height:612px;
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u1129_state5.b {
-  width:414px;
-  height:612px;
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
