客户详情页菜单横向滚动

--- a/files/客户详情/styles.css
+++ b/files/客户详情/styles.css
@@ -4056,6 +4056,558 @@
   width:375px;
   height:85px;
 }
+#u1371 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:640px;
+  height:65px;
+  overflow:hidden;
+}
+#u1371_state0 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:640px;
+  height:65px;
+  overflow:auto;
+  -webkit-overflow-scrolling:touch;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u1371_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u1372_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:640px;
+  height:65px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(242, 242, 242, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u1372 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:640px;
+  height:65px;
+}
+#u1373 {
+  position:absolute;
+  left:2px;
+  top:24px;
+  width:636px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u1374 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1375 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1376_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+  color:#33CC99;
+}
+#u1376 {
+  position:absolute;
+  left:35px;
+  top:32px;
+  width:49px;
+  height:15px;
+  font-size:12px;
+  color:#33CC99;
+}
+#u1377 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  white-space:nowrap;
+}
+#u1378_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:20px;
+  height:15px;
+}
+#u1378 {
+  position:absolute;
+  left:49px;
+  top:15px;
+  width:20px;
+  height:15px;
+}
+#u1379 {
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:16px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u1380 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1381 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1382_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:25px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1382 {
+  position:absolute;
+  left:145px;
+  top:32px;
+  width:25px;
+  height:15px;
+  font-size:12px;
+}
+#u1383 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:25px;
+  white-space:nowrap;
+}
+#u1384_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:20px;
+  height:15px;
+}
+#u1384 {
+  position:absolute;
+  left:147px;
+  top:15px;
+  width:20px;
+  height:15px;
+}
+#u1385 {
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:16px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u1386 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1387 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1388_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:37px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1388 {
+  position:absolute;
+  left:245px;
+  top:32px;
+  width:37px;
+  height:15px;
+  font-size:12px;
+}
+#u1389 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:37px;
+  white-space:nowrap;
+}
+#u1390_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:20px;
+  height:15px;
+}
+#u1390 {
+  position:absolute;
+  left:253px;
+  top:15px;
+  width:20px;
+  height:15px;
+}
+#u1391 {
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:16px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u1392 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1393_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:20px;
+  height:15px;
+}
+#u1393 {
+  position:absolute;
+  left:364px;
+  top:15px;
+  width:20px;
+  height:15px;
+}
+#u1394 {
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:16px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u1395 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1396_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1396 {
+  position:absolute;
+  left:350px;
+  top:32px;
+  width:49px;
+  height:15px;
+  font-size:12px;
+}
+#u1397 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  white-space:nowrap;
+}
+#u1398 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1399_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:20px;
+  height:15px;
+}
+#u1399 {
+  position:absolute;
+  left:462px;
+  top:15px;
+  width:20px;
+  height:15px;
+}
+#u1400 {
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:16px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u1401 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1402_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:25px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1402 {
+  position:absolute;
+  left:460px;
+  top:32px;
+  width:25px;
+  height:15px;
+  font-size:12px;
+}
+#u1403 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:25px;
+  white-space:nowrap;
+}
+#u1404 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1405_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:20px;
+  height:15px;
+}
+#u1405 {
+  position:absolute;
+  left:574px;
+  top:15px;
+  width:20px;
+  height:15px;
+}
+#u1406 {
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:16px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u1407_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+  color:#1E1E1E;
+}
+#u1407 {
+  position:absolute;
+  left:560px;
+  top:32px;
+  width:49px;
+  height:15px;
+  font-size:12px;
+  color:#1E1E1E;
+}
+#u1408 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  white-space:nowrap;
+}
+#u1371_state1 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:640px;
+  height:65px;
+  visibility:hidden;
+  overflow:auto;
+  -webkit-overflow-scrolling:touch;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u1371_state1_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u1371_state2 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:640px;
+  height:65px;
+  visibility:hidden;
+  overflow:auto;
+  -webkit-overflow-scrolling:touch;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u1371_state2_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u1371_state3 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:640px;
+  height:65px;
+  visibility:hidden;
+  overflow:auto;
+  -webkit-overflow-scrolling:touch;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u1371_state3_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u1371_state4 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:640px;
+  height:65px;
+  visibility:hidden;
+  overflow:auto;
+  -webkit-overflow-scrolling:touch;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u1371_state4_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u1371_state5 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:640px;
+  height:65px;
+  visibility:hidden;
+  overflow:auto;
+  -webkit-overflow-scrolling:touch;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u1371_state5_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
 body.a {  background-color:rgba(255, 255, 255, 1);
   background-image:none;
   position:static;
@@ -6584,6 +7136,234 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   width:320px;
   height:85px;
 }
+#u1371.a {
+  position:absolute;
+  left:0px;
+  top:40px;
+  width:320px;
+  height:65px;
+}
+#u1372.a {
+  width:540px;
+}
+#u1372_div.a {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:540px;
+  height:65px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(242, 242, 242, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u1373.a {
+  width:536px;
+}
+#u1376.a {
+  left:25px;
+  top:30px;
+}
+#u1376_div.a {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+  color:#33CC99;
+}
+#u1377.a {
+}
+#u1378.a {
+  left:39px;
+}
+#u1378_img.a {
+}
+#u1379.a {
+}
+#u1382.a {
+  left:125px;
+}
+#u1382_div.a {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:25px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1383.a {
+}
+#u1384.a {
+  left:130px;
+}
+#u1384_img.a {
+}
+#u1385.a {
+}
+#u1388.a {
+  left:215px;
+}
+#u1388_div.a {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:37px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1389.a {
+}
+#u1390.a {
+  left:223px;
+}
+#u1390_img.a {
+}
+#u1391.a {
+}
+#u1393.a {
+  left:314px;
+}
+#u1393_img.a {
+}
+#u1394.a {
+}
+#u1396.a {
+  left:300px;
+}
+#u1396_div.a {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1397.a {
+}
+#u1399.a {
+  left:397px;
+}
+#u1399_img.a {
+}
+#u1400.a {
+}
+#u1402.a {
+  left:395px;
+}
+#u1402_div.a {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:25px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1403.a {
+}
+#u1405.a {
+  left:477px;
+  width:17px;
+}
+#u1405_img.a {
+  width:17px;
+}
+#u1406.a {
+  width:13px;
+}
+#u1407.a {
+  left:465px;
+}
+#u1407_div.a {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+  color:#1E1E1E;
+}
+#u1408.a {
+}
+#u1371_state0.a {
+  width:320px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
+}
+#u1371_state1.a {
+  width:320px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
+}
+#u1371_state2.a {
+  width:320px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
+}
+#u1371_state3.a {
+  width:320px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
+}
+#u1371_state4.a {
+  width:320px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
+}
+#u1371_state5.a {
+  width:320px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
+}
 body.b {  background-color:rgba(255, 255, 255, 1);
   background-image:none;
   position:static;
@@ -9003,4 +9783,232 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   top:0px;
   width:414px;
   height:85px;
+}
+#u1371.b {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:550px;
+  height:65px;
+}
+#u1372.b {
+  width:550px;
+}
+#u1372_div.b {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:550px;
+  height:65px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(242, 242, 242, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u1373.b {
+  width:546px;
+}
+#u1376.b {
+  left:25px;
+  top:30px;
+}
+#u1376_div.b {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+  color:#33CC99;
+}
+#u1377.b {
+}
+#u1378.b {
+  left:39px;
+}
+#u1378_img.b {
+}
+#u1379.b {
+}
+#u1382.b {
+  left:130px;
+}
+#u1382_div.b {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:25px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1383.b {
+}
+#u1384.b {
+  left:130px;
+}
+#u1384_img.b {
+}
+#u1385.b {
+}
+#u1388.b {
+  left:220px;
+}
+#u1388_div.b {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:37px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1389.b {
+}
+#u1390.b {
+  left:228px;
+}
+#u1390_img.b {
+}
+#u1391.b {
+}
+#u1393.b {
+  left:329px;
+}
+#u1393_img.b {
+}
+#u1394.b {
+}
+#u1396.b {
+  left:315px;
+}
+#u1396_div.b {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1397.b {
+}
+#u1399.b {
+  left:407px;
+}
+#u1399_img.b {
+}
+#u1400.b {
+}
+#u1402.b {
+  left:405px;
+}
+#u1402_div.b {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:25px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u1403.b {
+}
+#u1405.b {
+  left:485px;
+  width:22px;
+}
+#u1405_img.b {
+  width:22px;
+}
+#u1406.b {
+  width:18px;
+}
+#u1407.b {
+  left:472px;
+}
+#u1407_div.b {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:49px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+  color:#1E1E1E;
+}
+#u1408.b {
+}
+#u1371_state0.b {
+  width:550px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
+}
+#u1371_state1.b {
+  width:550px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
+}
+#u1371_state2.b {
+  width:550px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
+}
+#u1371_state3.b {
+  width:550px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
+}
+#u1371_state4.b {
+  width:550px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
+}
+#u1371_state5.b {
+  width:550px;
+  background-color:rgba(255, 255, 255, 0);
+  background-image:none;
 }
