测试问题处理

--- a/files/站内消息/styles.css
+++ b/files/站内消息/styles.css
@@ -1660,14 +1660,14 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 }
 #u2783.a {
   width:322px;
-  height:486px;
+  height:523px;
 }
 #u2783_div.a {
   position:absolute;
   left:0px;
   top:0px;
   width:322px;
-  height:486px;
+  height:523px;
   background:inherit;
   background-color:rgba(242, 242, 242, 1);
   box-sizing:border-box;
@@ -1680,19 +1680,18 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2784.a {
-  top:235px;
+  top:254px;
   width:318px;
 }
 #u2786.a {
   width:300px;
-  height:130px;
 }
 #u2786_div.a {
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
-  height:130px;
+  height:75px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -1705,7 +1704,6 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2787.a {
-  top:57px;
   width:296px;
 }
 #u2788.a {
@@ -1777,14 +1775,13 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 }
 #u2795.a {
   width:300px;
-  height:130px;
 }
 #u2795_div.a {
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
-  height:130px;
+  height:75px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -1797,7 +1794,6 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2796.a {
-  top:57px;
   width:296px;
 }
 #u2797.a {
@@ -1841,6 +1837,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u2800.a {
 }
 #u2801.a {
+  left:205px;
 }
 #u2801_div.a {
   position:absolute;
@@ -1864,14 +1861,13 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 }
 #u2804.a {
   width:300px;
-  height:130px;
 }
 #u2804_div.a {
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
-  height:130px;
+  height:75px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -1884,7 +1880,6 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2805.a {
-  top:57px;
   width:296px;
 }
 #u2806.a {
@@ -1928,6 +1923,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u2809.a {
 }
 #u2810.a {
+  left:205px;
 }
 #u2810_div.a {
   position:absolute;
@@ -1951,14 +1947,13 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 }
 #u2813.a {
   width:300px;
-  height:130px;
 }
 #u2813_div.a {
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
-  height:130px;
+  height:75px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -1971,7 +1966,6 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2814.a {
-  top:57px;
   width:296px;
 }
 #u2815.a {
@@ -2015,6 +2009,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u2818.a {
 }
 #u2819.a {
+  left:205px;
 }
 #u2819_div.a {
   position:absolute;
@@ -2038,14 +2033,14 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 }
 #u2821.a {
   width:300px;
-  height:130px;
+  height:76px;
 }
 #u2821_div.a {
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
-  height:130px;
+  height:76px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -2058,7 +2053,6 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2822.a {
-  top:57px;
   width:296px;
 }
 #u2823.a {
@@ -2102,6 +2096,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u2826.a {
 }
 #u2827.a {
+  left:205px;
 }
 #u2827_div.a {
   position:absolute;
@@ -2125,14 +2120,14 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 }
 #u2829.a {
   width:300px;
-  height:130px;
+  height:41px;
 }
 #u2829_div.a {
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
-  height:130px;
+  height:41px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -2145,7 +2140,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2830.a {
-  top:57px;
+  top:12px;
   width:296px;
 }
 #u2832.a {
@@ -2622,14 +2617,13 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u2786.b {
   width:394px;
-  height:120px;
 }
 #u2786_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:75px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -2642,7 +2636,6 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2787.b {
-  top:52px;
   width:390px;
 }
 #u2788.b {
@@ -2709,14 +2702,13 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u2795.b {
   width:394px;
-  height:120px;
 }
 #u2795_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:75px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -2729,7 +2721,6 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2796.b {
-  top:52px;
   width:390px;
 }
 #u2797.b {
@@ -2796,14 +2787,13 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u2804.b {
   width:394px;
-  height:120px;
 }
 #u2804_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:75px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -2816,7 +2806,6 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2805.b {
-  top:52px;
   width:390px;
 }
 #u2806.b {
@@ -2883,14 +2872,13 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u2813.b {
   width:394px;
-  height:120px;
 }
 #u2813_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:75px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -2903,7 +2891,6 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2814.b {
-  top:52px;
   width:390px;
 }
 #u2815.b {
@@ -2970,14 +2957,14 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u2821.b {
   width:394px;
-  height:120px;
+  height:85px;
 }
 #u2821_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:85px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -2990,7 +2977,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2822.b {
-  top:52px;
+  top:34px;
   width:390px;
 }
 #u2823.b {
@@ -3057,14 +3044,14 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u2829.b {
   width:394px;
-  height:120px;
+  height:40px;
 }
 #u2829_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:40px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -3077,7 +3064,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2830.b {
-  top:52px;
+  top:12px;
   width:390px;
 }
 #u2832.b {
@@ -3191,14 +3178,14 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u2846.b {
   width:394px;
-  height:120px;
+  height:82px;
 }
 #u2846_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:82px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -3211,7 +3198,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2847.b {
-  top:52px;
+  top:33px;
   width:390px;
 }
 #u2848.b {
@@ -3303,14 +3290,14 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u2856.b {
   width:394px;
-  height:120px;
+  height:45px;
 }
 #u2856_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:45px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -3323,7 +3310,6 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u2857.b {
-  top:52px;
   width:390px;
 }
 #u2769_state0.b {
